python-odbc/to_pyodbc/tests/test_pyodbc_crud.result
test_01_create_table (__main__.pyodbc_crud_test.test_01_create_table) ... ERROR
test_02_insert_data (__main__.pyodbc_crud_test.test_02_insert_data) ... ERROR
test_03_select_data (__main__.pyodbc_crud_test.test_03_select_data) ... ERROR
test_04_update_data (__main__.pyodbc_crud_test.test_04_update_data) ... ERROR
test_05_delete_data (__main__.pyodbc_crud_test.test_05_delete_data) ... ERROR
test_06_drop_table (__main__.pyodbc_crud_test.test_06_drop_table) ... ERROR
test_07_complex_crud_operations (__main__.pyodbc_crud_test.test_07_complex_crud_operations) ... ERROR

======================================================================
ERROR: test_01_create_table (__main__.pyodbc_crud_test.test_01_create_table)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

======================================================================
ERROR: test_02_insert_data (__main__.pyodbc_crud_test.test_02_insert_data)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

======================================================================
ERROR: test_03_select_data (__main__.pyodbc_crud_test.test_03_select_data)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

======================================================================
ERROR: test_04_update_data (__main__.pyodbc_crud_test.test_04_update_data)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

======================================================================
ERROR: test_05_delete_data (__main__.pyodbc_crud_test.test_05_delete_data)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

======================================================================
ERROR: test_06_drop_table (__main__.pyodbc_crud_test.test_06_drop_table)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

======================================================================
ERROR: test_07_complex_crud_operations (__main__.pyodbc_crud_test.test_07_complex_crud_operations)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/hwanyseo/source/fork/test/cubrid-driverlink-test/python-odbc/to_pyodbc/tests/test_CUBRIDdb_crud.py", line 30, in setUp
    self.con = self.driver.connect(*self.connect_args, **self.connect_kw_args)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: function takes at most 1 non-keyword argument

----------------------------------------------------------------------
Ran 7 tests in 0.001s

FAILED (errors=7)
